Wed Mar 31 11:46:03 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* Instance/bundle.make: Use ALL_LDFLAGS when running DLLWRAP on
	windows.
	* Instance/framework.make: Similar change.
	* Instance/palette.make: Similar change.

Wed Mar 31 11:44:21 2004  Willem Rein Oudshoorn <woudshoo@xs4all.nl>
	
	* Instance/library.make: Use ALL_LDFLAGS when running DLLWRAP on
	windows.

2004-03-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Instance/Documentation/autogsdoc.make: Make doc subdirectory if
	necessary.

2004-03-28  David Ayers  <d.ayers@inode.at>
2004-03-31 Richard Frith-Macdonald <rfm@gnu.org>

	* jni.make: Add support for MacOS-X ... use the java 1.3.1 headers
	fromt the JavaVM framework.

Tue Mar 30 02:44:21 2004  Nicola Pero <n.pero@mi.flashnet.it>
	
	* Documentation/filesystem.texi: Clarify the differences between
	the Local domain and System domain, clearly state that the default
	installation directory of software should be the Local domain, and
	mention that the Network domain is now optional and disabled by
	default.  Other minor clarifications and tidyups.

Tue Mar 30 02:01:59 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* Documentation/make.texi (PACKAGE_NAME, PACKAGE_VERSION): Updated
	documentation.

Mon Mar 29 12:58:34 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* common.make (MAJOR_VERSION): Variable removed.
	(MINOR_VERSION): Variable removed.
	(SUBMINOR_VERSION): Variable removed.
	(VERSION): Variable removed.
	* Instance/framework.make (VERSION): Set VERSION from xxx_VERSION
	if available.  Use 0.0.1 as default.
	* Instance/library.make (VERSION): Similar changes.
	
Mon Mar 29 12:41:58 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* Master/rules.make (PACKAGE_NAME): Set it here; set it to
	unnamed-package if not set.
	(PACKAGE_VERSION): Set it to 0.0.1 if not set.
	* Master/source-distribution.make (PACKAGE_NAME): Do not set it
	here.
	
Mon Mar 29 12:19:38 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* Version: Do not define VERSION.
