@@ -235,14 +235,16 @@ ALL_OBJCFLAGS = $(INTERNAL_OBJCFLAGS) $(ADDITIONAL_OBJCFLAGS) \
    $(AUXILIARY_INCLUDE_DIRS) \
    $(DERIVED_SOURCES_HEADERS_FLAG) \
    -I. $(SYSTEM_INCLUDES) \
-   $(GNUSTEP_HEADERS_FLAGS)
+   $(GNUSTEP_HEADERS_FLAGS) \
+   $(GNUSTEP_FRAMEWORKS_FLAGS)
 
 ALL_CFLAGS = $(INTERNAL_CFLAGS) $(ADDITIONAL_CFLAGS) \
    $(AUXILIARY_CFLAGS) $(ADDITIONAL_INCLUDE_DIRS) \
    $(AUXILIARY_INCLUDE_DIRS) \
    $(DERIVED_SOURCES_HEADERS_FLAG) \
    -I. $(SYSTEM_INCLUDES) \
-   $(GNUSTEP_HEADERS_FLAGS) 
+   $(GNUSTEP_HEADERS_FLAGS) \
+   $(GNUSTEP_FRAMEWORKS_FLAGS)
 
 # if you need, you can define ADDITIONAL_CCFLAGS to add C++ specific flags
 ALL_CCFLAGS = $(ADDITIONAL_CCFLAGS) $(AUXILIARY_CCFLAGS)
@@ -266,6 +268,7 @@ ALL_LDFLAGS += $(ADDITIONAL_LDFLAGS) $(AUXILIARY_LDFLAGS) $(GUI_LDFLAGS) \
 ALL_LIB_DIRS = $(ADDITIONAL_FRAMEWORK_DIRS) $(AUXILIARY_FRAMEWORK_DIRS) \
    $(ADDITIONAL_LIB_DIRS) $(AUXILIARY_LIB_DIRS) \
    $(GNUSTEP_LIBRARIES_FLAGS) \
+   $(GNUSTEP_FRAMEWORKS_FLAGS) \
    $(SYSTEM_LIB_DIR)
 
 # We use .plist (property-list files, see gnustep-base) in quite a few
