@@ -1,3 +1,14 @@
+2004-04-02  David Ayers  <d.ayers@inode.at>
+
+	* GNUstep-reset.sh: Unset DYLD_LIBRARY_PATH and	
+	DYLD_FRAMEWORK_PATH.
+	* common.make: Mark as makefile for emacs.  Add support for
+	setting GNUSTEP_FRAMEWORKS_DIRS and GNUSTEP_FRAMEWORKS_FLAGS 
+	for apple-apple-apple.
+	* ld_lib_path.(c)sh: Set DYLD_FRAMEWORK_PATH for
+	apple-apple-apple.
+	* rules.make: Added support for GNUSTEP_FRAMEWORKS_FLAGS.
+	
 Wed Mar 31 11:46:03 2004  Nicola Pero <n.pero@mi.flashnet.it>
 
 	* Instance/bundle.make: Use ALL_LDFLAGS when running DLLWRAP on
@@ -15,7 +26,6 @@ Wed Mar 31 11:44:21 2004  Willem Rein Oudshoorn <woudshoo@xs4all.nl>
 	* Instance/Documentation/autogsdoc.make: Make doc subdirectory if
 	necessary.
 
-2004-03-28  David Ayers  <d.ayers@inode.at>
 2004-03-31 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* jni.make: Add support for MacOS-X ... use the java 1.3.1 headers
